fix mobile view
fixed divs overlapping on mobile view

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 }
 section {
     margin: 0% 15%;
-    height: 100%;
+    min-height: 100%;
     max-width: 100%;
 }
 .center {
